<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp">

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/txt_user_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_user_name"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/txt_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_password"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_forget_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_account_sign_up"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>